  have now been fed to a phpdoc generator, which revealed that some changes
  needed to be made.
- ALL: The meta field on our forms is now placed in the first fieldset/details
  element to prevent problems with rendering. PrestaShop requires this anyway,
  so that code was lifted to the general FormHelper.

Bugs:
- MA2.4: Finally tested with Magento 2.4:
  - <details> sections cold not be opened and remained closed

7.4.3 (2022-10-31) (All but MA)
-------------------------------
Features:
- All: Added possibility to refer to the translated term for "Order" or
  "CreditNote" in field references. You can use:
  - [InvoiceSourceType::label] for the current invoice to send (order or credit
    note)
  - [originalInvoiceSourceType::label] for the order of this credit note if is a
    refund, or the order itself.
  - [refundedInvoiceSourceType::label] for the order if it is credit note, empty
    otherwise.
  The default configuration value for the "description" field will use these new
  values.
- Added a field "Bcc e-mail address for the packing slip" to the "Documents" -
  "Packing slip" section of the Acumulus settings. The "To address" now also
  accepts multiple addresses.
- PS+JOO: Added mail (pdf document) buttons on Acumulus invoice status overview.
- WC+OC: Improved styling of document links and buttons on status overview.

Bugs:
- All: configuration fields for mail-addresses that allow field references
  should not be of html type="email" and should only be validated as containing
  valid mail addresses when no field references are used.


7.4.2 (2022-10-25) (OC only)
----------------------------
Features:
- OC: Added mail (pdf document) buttons on Acumulus invoice status overview.
- To improve showing the documents links and buttons on the invoice status
  overview (on the order detail page), the 'markup' field type of our own form
  handling now accepts an array of 'inputs'. These will be rendered (by our own